2009-02-07  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinyadvice.el (tinyadvice-elts): replace old backquote.

	* tiny/tinylibmail.el: Massive update: replace old backquotes

        * tiny/tinyreplace.el (tinyreplace-:menu): Correct documentaiton string.

	* tiny/tiny-admin-util.el: Remove autoload utilities and move to
	tinylisp.el

	* tiny/tinylisp.el (tinylisp-autoload-generate-file): Adjust
	description.
	(tinylisp-:menu-autoload): New.
	(tinylisp-:ignore-dir-regexp): New.
	(tinylisp-directory-recursive-macro): New. New.
	(tinylisp-with-file-env-macro): New.
	(tinylisp-directory-list): New.
	(tinylisp-autoload-real-directory-last): New.
	(tinylisp-autoload-real-directory-to-file-name): New.
	(tinypath-tmp-autoload-file-footer): New.
	(tinylisp-autoload-real-directories): New.
	(tinylisp-autoload-real-generate-file-autoloads-1): New.
	(tinylisp-autoload-real-generate-file-autoloads): New.
	(tinylisp-autoload-real-generate-loaddefs-file-list): New.
	(tinylisp-autoload-real-generate-loaddefs-dir): New.
	(tinylisp-autoload-real-generate-loaddefs-recursive): New.
	(tinylisp-autoload-real-update-update-file-autoloads-1): New.
	(tinylisp-autoload-real-update-file-autoloads): New.
	(tinylisp-autoload-real-build-for-file-1): New.
	(tinylisp-autoload-real-build-for-file): New.
	(tinylisp-autoload-real-build-for-dir): New.
	(tinylisp-autoload-real-autoload-build-recursive): New.
	(tinylisp-forward-def): Correct forward movement.
	(tinylisp-autoload-quick-build-from-file): New.
	(tinylisp-autoload-quick-build-interactive-from-file): New.

	* tiny/tiny-setup.el: OBSOLETE file. Add `error' to prevent using it.

	* tiny/tinydebian.el (tinydebian-bug-gnu-emacs-bts-p): Correct
	`gnus-summary-mode' test.
	(tinydebian-:emacs-bts-line-regexp): New.
	(tinydebian-bug-gnu-emacs-bts-string-p): Use
	`tinydebian-:emacs-bts-line-regexp'.
	(tinydebian-bug-gnu-emacs-bts-re-search-email): New.
	(tinydebian-bug-nbr-forward): Adjust regexp for 'bug' and 'Bug'.